--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chapter 1</title>
+    <title>Exercises</title>
 </head>
 <body>
-    hello world
-    
-
-
+   
     <script src="app.js"></script>
 </body>
 </html>
