--- a/JS/index.html
+++ b/JS/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercises</title>
 </head>
 <body>
-    
+
+    <h1>Hello javascript</h1>
+   
     <script src="app.js"></script>
 </body>
 </html>
