--- a/For Loops/index.html
+++ b/For Loops/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercises</title>
+    <title>Document</title>
 </head>
 <body>
+    <h1>Hello Loops</h1>
 
-    <h1>Hello javascript</h1>
-   
+    <!-- <div class="single-item"></div>
+    <div class="index"></div>
+     -->
     <script src="app.js"></script>
 </body>
 </html>
